; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/wireless/realtek/rtlwifi/rtl8821ae/extr_phy.c__rtl8821ae_iqk_backup_rf.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/wireless/realtek/rtlwifi/rtl8821ae/extr_phy.c__rtl8821ae_iqk_backup_rf.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ieee80211_hw = type { i32 }
%struct.rtl_priv = type { i32 }

@RF90_PATH_A = common dso_local global i32 0, align 4
@BMASKDWORD = common dso_local global i32 0, align 4
@RF90_PATH_B = common dso_local global i32 0, align 4
@COMP_IQK = common dso_local global i32 0, align 4
@DBG_LOUD = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [22 x i8] c"BackupRF Success!!!!\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ieee80211_hw*, i64*, i64*, i64*, i64)* @_rtl8821ae_iqk_backup_rf to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @_rtl8821ae_iqk_backup_rf(%struct.ieee80211_hw* %0, i64* %1, i64* %2, i64* %3, i64 %4) #0 {
  %6 = alloca %struct.ieee80211_hw*, align 8
  %7 = alloca i64*, align 8
  %8 = alloca i64*, align 8
  %9 = alloca i64*, align 8
  %10 = alloca i64, align 8
  %11 = alloca %struct.rtl_priv*, align 8
  %12 = alloca i64, align 8
  store %struct.ieee80211_hw* %0, %struct.ieee80211_hw** %6, align 8
  store i64* %1, i64** %7, align 8
  store i64* %2, i64** %8, align 8
  store i64* %3, i64** %9, align 8
  store i64 %4, i64* %10, align 8
  %13 = load %struct.ieee80211_hw*, %struct.ieee80211_hw** %6, align 8
  %14 = call %struct.rtl_priv* @rtl_priv(%struct.ieee80211_hw* %13)
  store %struct.rtl_priv* %14, %struct.rtl_priv** %11, align 8
  %15 = load %struct.ieee80211_hw*, %struct.ieee80211_hw** %6, align 8
  %16 = call i32 @BIT(i32 31)
  %17 = call i32 @rtl_set_bbreg(%struct.ieee80211_hw* %15, i32 2092, i32 %16, i32 0)
  store i64 0, i64* %12, align 8
  br label %18

18:                                               ; preds = %45, %5
  %19 = load i64, i64* %12, align 8
  %20 = load i64, i64* %10, align 8
  %21 = icmp ult i64 %19, %20
  br i1 %21, label %22, label %48

22:                                               ; preds = %18
  %23 = load %struct.ieee80211_hw*, %struct.ieee80211_hw** %6, align 8
  %24 = load i32, i32* @RF90_PATH_A, align 4
  %25 = load i64*, i64** %9, align 8
  %26 = load i64, i64* %12, align 8
  %27 = getelementptr inbounds i64, i64* %25, i64 %26
  %28 = load i64, i64* %27, align 8
  %29 = load i32, i32* @BMASKDWORD, align 4
  %30 = call i64 @rtl_get_rfreg(%struct.ieee80211_hw* %23, i32 %24, i64 %28, i32 %29)
  %31 = load i64*, i64** %7, align 8
  %32 = load i64, i64* %12, align 8
  %33 = getelementptr inbounds i64, i64* %31, i64 %32
  store i64 %30, i64* %33, align 8
  %34 = load %struct.ieee80211_hw*, %struct.ieee80211_hw** %6, align 8
  %35 = load i32, i32* @RF90_PATH_B, align 4
  %36 = load i64*, i64** %9, align 8
  %37 = load i64, i64* %12, align 8
  %38 = getelementptr inbounds i64, i64* %36, i64 %37
  %39 = load i64, i64* %38, align 8
  %40 = load i32, i32* @BMASKDWORD, align 4
  %41 = call i64 @rtl_get_rfreg(%struct.ieee80211_hw* %34, i32 %35, i64 %39, i32 %40)
  %42 = load i64*, i64** %8, align 8
  %43 = load i64, i64* %12, align 8
  %44 = getelementptr inbounds i64, i64* %42, i64 %43
  store i64 %41, i64* %44, align 8
  br label %45

45:                                               ; preds = %22
  %46 = load i64, i64* %12, align 8
  %47 = add i64 %46, 1
  store i64 %47, i64* %12, align 8
  br label %18

48:                                               ; preds = %18
  %49 = load %struct.rtl_priv*, %struct.rtl_priv** %11, align 8
  %50 = load i32, i32* @COMP_IQK, align 4
  %51 = load i32, i32* @DBG_LOUD, align 4
  %52 = call i32 @RT_TRACE(%struct.rtl_priv* %49, i32 %50, i32 %51, i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str, i64 0, i64 0))
  ret void
}

declare dso_local %struct.rtl_priv* @rtl_priv(%struct.ieee80211_hw*) #1

declare dso_local i32 @rtl_set_bbreg(%struct.ieee80211_hw*, i32, i32, i32) #1

declare dso_local i32 @BIT(i32) #1

declare dso_local i64 @rtl_get_rfreg(%struct.ieee80211_hw*, i32, i64, i32) #1

declare dso_local i32 @RT_TRACE(%struct.rtl_priv*, i32, i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
